<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">CALCULATOR</string>
    <string name="number1">number 1</string>
    <string name="number2">number 2</string>
    <string name="result">Result</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
</resources>